--- a/app/views/settings/hostings/_brand_fetch_settings.html.erb
+++ b/app/views/settings/hostings/_brand_fetch_settings.html.erb
@@ -5,10 +5,9 @@
       <p class="text-sm text-secondary">You have successfully configured your Brand Fetch Client ID through the BRAND_FETCH_CLIENT_ID environment variable.</p>
     <% else %>
       <p class="text-secondary text-sm mb-4"><%= t(".description") %></p>
-        <ol class="text-sm text-secondary mb-4 list-decimal ml-6 space-y-2">
             <details class="mb-4">
               <summary class="cursor-pointer font-medium text-primary flex items-center">
-                <span class="mr-1"></span>How to obtain your Client ID
+                How to obtain your Brand Fetch Client ID
               </summary>
               <ol class="text-sm text-secondary mt-2 list-decimal ml-6 space-y-2">
                 <li>
@@ -22,7 +21,7 @@
                 </li>
               </ol>
             </details>
-          </ol>
+
     <% end %>
   </div>
 
