--- a/app/views/settings/hostings/_brand_fetch_settings.html.erb
+++ b/app/views/settings/hostings/_brand_fetch_settings.html.erb
@@ -13,7 +13,7 @@
               Visit <a href="https://brandfetch.com/developers" target="_blank" rel="noopener noreferrer" class="underline">brandfetch.com</a></u> and create a free Brand Fetch Developer account.
             </li>
             <li>
-              Go to the <u><a href="https://developers.brandfetch.com/dashboard/logo-api" target="_blank" rel="noopener noreferrer" class="underline">Logo API</a></u> page.
+              Go to the <a href="https://developers.brandfetch.com/dashboard/logo-api" target="_blank" rel="noopener noreferrer" class="underline">Logo API</a> page.
             </li>
             <li>
               Tap the eye icon under the "Your Client ID" section to reveal your <strong>Client ID</strong> and paste it below.
