Style form consistently

--- a/app/views/settings/hostings/_invite_code_settings.html.erb
+++ b/app/views/settings/hostings/_invite_code_settings.html.erb
@@ -9,17 +9,19 @@
                          url: settings_hosting_path,
                          method: :patch,
                          data: { controller: "auto-submit-form", auto_submit_form_trigger_event_value: "change" } do |form| %>
-      <%= form.select :onboarding_state,
-                      options_for_select(
-                        [
-                          [ t(".states.open"), "open" ],
-                          [ t(".states.closed"), "closed" ],
-                          [ t(".states.invite_only"), "invite_only" ]
-                        ],
-                        Setting.onboarding_state
-                      ),
-                      { label: false },
-                      { data: { auto_submit_form_target: "auto" } } %>
+      <div class="form-field w-fit">
+        <%= form.select :onboarding_state,
+                        options_for_select(
+                          [
+                            [ t(".states.open"), "open" ],
+                            [ t(".states.closed"), "closed" ],
+                            [ t(".states.invite_only"), "invite_only" ]
+                          ],
+                          Setting.onboarding_state
+                        ),
+                        { label: false },
+                        { data: { auto_submit_form_target: "auto" } } %>
+      </div>
     <% end %>
   </div>
 
