--- a/app/views/transactions/_transaction.html.erb
+++ b/app/views/transactions/_transaction.html.erb
@@ -68,6 +68,10 @@
                     <% if transaction.transfer.present? %>
                       <%= render "transactions/transfer_match", transaction: transaction %>
                     <% end %>
+
+                    <% if transaction.respond_to?(:was_merged) && transaction.was_merged %>
+                      <%= render DS::Tooltip.new(text: "Merged from pending to posted", icon: "git-merge", size: "sm") %>
+                    <% end %>
                   </div>
                 </div>
 
