Some UX improvements
- We shouldn't cache LLM results if they returned empty category or merchant
- Add button to clear AI cache ( good to make it clear to users this will cause costs? )
- Added a job to clear the cache, with low prio

--- a/app/views/rules/index.html.erb
+++ b/app/views/rules/index.html.erb
@@ -5,6 +5,13 @@
       <%= render DS::Menu.new do |menu| %>
         <% menu.with_item(
           variant: "button",
+          text: "Reset AI cache",
+          href: clear_ai_cache_rules_path,
+          icon: "refresh-cw",
+          method: :post,
+          confirm: "Are you sure you want to reset the AI cache? This will allow AI rules to re-process all transactions.") %>
+        <% menu.with_item(
+          variant: "button",
           text: "Delete all rules",
           href: destroy_all_rules_path,
           icon: "trash-2",
