--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -45,16 +45,8 @@
 
 <%# Auto-open the SimpleFin relink modal after creation when requested %>
 <% if params[:open_relink_for].present? %>
-  <script>
-    (function(){
-      var url = "<%= relink_simplefin_item_path(params[:open_relink_for]) %>";
-      var frame = document.getElementById("modal");
-      if (frame) {
-        frame.src = url;
-      } else {
-        // Fallback to full-page navigation if the modal frame is not present
-        window.location.href = url;
-      }
-    })();
-  </script>
+  <div
+    data-controller="auto-relink"
+    data-auto-relink-url-value="<%= relink_simplefin_item_path(params[:open_relink_for]) %>"
+  ></div>
 <% end %>
