--- a/app/views/recurring_transactions/_projected_transaction.html.erb
+++ b/app/views/recurring_transactions/_projected_transaction.html.erb
@@ -1,6 +1,6 @@
 <%# locals: (recurring_transaction:) %>
 
-<div class="grid grid-cols-12 items-center text-primary text-sm font-medium p-4 lg:p-4 opacity-60 bg-gray-50 rounded">
+<div class="grid grid-cols-12 items-center text-subdued text-sm font-medium p-4 lg:p-4 bg-container-inset rounded">
   <div class="pr-4 lg:pr-10 flex items-center gap-3 lg:gap-4 col-span-8">
     <div class="max-w-full">
       <%= content_tag :div, class: ["flex items-center gap-2"] do %>
@@ -25,7 +25,7 @@
               </div>
 
               <div class="flex items-center gap-1 flex-shrink-0">
-                <span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-blue-100 text-blue-800">
+                <span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-blue-tint-10 text-link">
                   <%= t("recurring_transactions.projected") %>
                 </span>
               </div>
@@ -45,6 +45,6 @@
   </div>
 
   <div class="col-span-2 ml-auto text-right">
-    <%= content_tag :p, format_money(-recurring_transaction.amount_money), class: ["text-green-600": recurring_transaction.amount.negative?] %>
+    <%= content_tag :p, format_money(-recurring_transaction.amount_money), class: ["text-success": recurring_transaction.amount.negative?] %>
   </div>
 </div>
